package app.domain.mappers;

import app.domain.mappers.dto.TestStoreDTO;
import app.domain.stores.TestStore;

import java.util.ArrayList;
import java.util.List;

public class TestStoreMapper {
/*
    private TestStoreDTO toDTO(TestStore tSt) {return new TestStoreDTO(tSt);}

    public List<TestStoreDTO> toDTO(List<TestStore> testS) {
        List<TestStoreDTO> tListDto = new ArrayList<>();
        for (TestStore test : testS) {
            tListDto.add(this.toDTO(test));
        }
        return tListDto ;
    }
*/

}
