package app.domain.mappers.dto;
import app.domain.stores.TestStore;

public class TestStoreDTO {
 /*   private TestStore tSt;

    public TestStoreDTO(TestStore tSt) {
        this.tSt = tSt;
    }


*/

}
